--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 
 
   </head>
-  <body>
+  <body oncontextmenu="return false">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -59,5 +59,17 @@
       }
       addToHomeScreen();
     </script>
+
+<script>
+  if ('serviceWorker' in navigator) {
+     console.log("Will the service worker register?");
+     navigator.serviceWorker.register('service-worker.js')
+       .then(function(reg){
+         console.log("Yes, it did.");
+      }).catch(function(err) {
+         console.log("No it didn't. This happened:", err)
+     });
+  }
+ </script>
   </body>
 </html>
