--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
     <script>
       addToHomeScreen();
     </script> -->
-    <script language="JavaScript">
+    <script>
       
       window.onload = function () {
           document.addEventListener("contextmenu", function (e) {
