added local bookmark

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
     <script>
       addToHomeScreen();
     </script> -->
-    <!-- <script>
+    <script>
       
       window.onload = function () {
           document.addEventListener("contextmenu", function (e) {
@@ -88,7 +88,7 @@
           }
       }
 //edit: removed ";" from last "}" because of javascript error
-</script> -->
+</script>
 </body>
 
 </html>
