--- a/sort.html
+++ b/sort.html
@@ -1,59 +1,128 @@
 <html>
-
 <head>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
-    <title>Sorting</title>
+    <title>Student Form</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <style>
         body {
-            display: grid;
-            place-items: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
             font-family: 'Poppins', sans-serif;
-            padding: 100px 0;
-        }
-
-        button {
-            border: none;
-            border-radius: 3px;
-            padding: 10px 20px;
-            color: #fff;
-            background: #e91e63;
-            margin-top: 10px;
-            transition: all 0.3s;
-            cursor: pointer;
-        }
-
-        p {
-            font-size: 20px;
-            text-align: center;
-        }
-
-        p span {
-            color: #666;
-            letter-spacing: 1px;
-        }
-
-        #demo {
-            letter-spacing: 2px;
+            height: 100vh;
         }
     </style>
 </head>
-
 <body>
+    <h5 class="display-4 fw-bold text-center pb-4">Create New Student</h5>
+    <div class="container">
+        <form method="POST" class="row g-3 col-md-8 col-12 mx-auto p-3 py-4 shadow"  onsubmit="saveFile()">
+            <div class="col-6 mb-0 mt-2">
+                <label for="sname" class="form-label">Student Name</label>
+                <input type="text" class="form-control" id="sname" />
+            </div>
+            <div class="col-6 mb-0 mt-2">
+                <label for="fathername" class="form-label">Father's Name</label>
+                <input type="text" class="form-control" id="fathername" />
+            </div>
+            <div class="col-6 mb-0 mt-2">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" required />
 
-    <p id="arr">Click the button to sort the array in ascending order.</p>
+            </div>
+            <div class="col-6 mb-0 mt-2">
+                <label for="phone" class="form-label">Phone Number</label>
+                <input type="tel" minlength="10" maxlength="14" class="form-control" id="phone" />
+            </div>
+            <div class="col-4 mb-0 mt-2">
+                <label for="class" class="form-label">Class</label>
+                <select id="class" class="form-select" required>
+                    <option selected>6th</option>
+                    <option>7th</option>
+                    <option>8th</option>
+                    <option>9th</option>
+                    <option>10th</option>
+                </select>
+            </div>
+            <div class="col-4 mb-0 mt-2">
+                <label for="age" class="form-label">Age</label>
+                <input type="number" class="form-control" max="20" min="10" id="age" required />
+            </div>
+            <div class="col-4 mb-0 mt-2">
+                <label for="marks" class="form-label">Marks %</label>
+                <input type="number" class="form-control" id="marks" max="100" min="0" required />
+            </div>
+            <div class="col-12 mb-0 mt-2">
+                <label for="address" class="form-label">Address</label>
+                <input type="text" class="form-control" id="address" placeholder="1234 Main Street " required />
+            </div>
+            <div class="col-md-5 mb-0 mt-2">
+                <label for="city" class="form-label">City</label>
+                <input type="text" class="form-control" id="city" required />
+            </div>
+            <div class="col-md-4 mb-0 mt-2">
+                <label for="state" class="form-label">State</label>
+                <input type="text" class="form-control" id="state" required />
+            </div>
+            <div class="col-md-3 mb-0 mt-2">
+                <label for="zip" class="form-label">Zip Code</label>
+                <input type="text" class="form-control" id="zip" required />
+            </div>
 
-    <button onclick="myFunction()">Sort Array</button>
-
-    <p id="demo"></p>
+            <div class="py-2">
+                <button type="reset" class="btn btn-danger bg-gradient px-4 py-2">Reset</button>
+                <button type="submit" class="btn btn-primary bg-gradient px-4 py-2">Submit</button>
+            </div>
+        </form>
+    </div>
 
     <script>
-        var points = [40, 100, 1, 5, 25, 10];
-        document.getElementById("arr").innerHTML += `<br /><span>Array before sort : ${points}</span>`;
 
-        function myFunction() {
-            points.sort(function (a, b) { return a - b });
-            document.getElementById("demo").innerHTML = `Array after sort : ${points}`;
+        let saveFile = () => {
+
+            // Get the data from each element on the form.
+            const name = document.getElementById('sname');
+            const fathername = document.getElementById('fathername');
+            const email = document.getElementById('email');
+            const phone = document.getElementById('phone');
+            const sclass = document.getElementById('class');
+            const age = document.getElementById('age');
+            const marks = document.getElementById('marks');
+            const address = document.getElementById('address');
+            const city = document.getElementById('city');
+            const state = document.getElementById('state');
+            const zip = document.getElementById('zip');
+
+            // This variable stores all the data.
+            let data =
+            `Name: ${name.value}\n
+            Father Name: ${fathername.value}\n 
+            Email: ${email.value}\n 
+            Phone: ${phone.value}\n 
+            Class: ${sclass.value}\n 
+            Age: ${age.value}\n 
+            Marks: ${marks.value}\n 
+            Address: ${address.value}, ${city.value}, ${state.value}, ${zip.value}`;
+
+            // Convert the text to BLOB.
+            const textToBLOB = new Blob([data], { type: 'text/plain' });
+            const sFileName = 'yourFormData.txt';	   // The file to save the data.
+            let newLink = document.createElement("a");
+            newLink.download = sFileName;
+
+            if (window.webkitURL != null) {
+                newLink.href = window.webkitURL.createObjectURL(textToBLOB);
+            }
+            else {
+                newLink.href = window.URL.createObjectURL(textToBLOB);
+                newLink.style.display = "none";
+                document.body.appendChild(newLink);
+            }
+
+            newLink.click();
         }
     </script>
 
