--- a/client/public/index.html
+++ b/client/public/index.html
@@ -42,7 +42,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  <!-- <script>
+  <script>
     window.onload = function () {
       document.addEventListener("contextmenu", function (e) {
         e.preventDefault();
@@ -82,7 +82,7 @@
       }
     }
 //edit: removed ";" from last "}" because of javascript error
-  </script> -->
+  </script>
 </body>
 
 </html>
